--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
               id="cityInput"
               type="text"
               class="w-full py-4 pl-12 pr-6 rounded-full border-0 shadow-md text-lg focus:ring-2 focus:ring-emerald-500 focus:outline-none"
-              placeholder="Masukkan nama kota atau kecamatan..."
+              placeholder="Masukkan nama kota"
             />
           </div>
 
